Bug 303263 - unsorted operation list in add message widget property dialog of sequence diagrams
Summary: unsorted operation list in add message widget property dialog of sequence dia...
Status: RESOLVED FIXED
Alias: None
Product: umbrello
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources All
: NOR normal
Target Milestone: ---
Assignee: Umbrello Development Group
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-07-09 21:44 UTC by Ralf Habacker
Modified: 2013-11-06 17:40 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.10.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ralf Habacker 2012-07-09 21:44:20 UTC
The list of operations in the add message widget property dialog is currently unsorted. This makes is very hard to find a dedicated operation and reduces the usability of sequence diagrams

Reproducible: Always

Steps to Reproduce:
1. open umbrello 
2. create a class with multiple methods or import a class with several members
3. create a new sequence diagram 
4. add a new unknown typed object and an object of the imported class
5. add a new message to the object of the imported class
6. select present operation
Actual Results:  
an unsorted list of operations is displayed

Expected Results:  
a sorted operation list should be displayed
Comment 1 Ralf Habacker 2012-07-10 18:15:43 UTC
SVN commit 1305113 by habacker:

Sort operation list in sequence diagrams.


 M  +6 -0      selectopdlg.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1305113
Comment 2 Ralf Habacker 2013-11-06 17:40:43 UTC
bug has been closed in 4.10.0