Sort operation list in sequence diagrams.

BUG: 303263

svn path=/trunk/KDE/kdesdk/umbrello/; revision=1305113